# sfacomposable

./: .gitignore  README.rst  __init__.py  base.py  functional.py  lib.py  setup.cfg
src/: base.py
src/sfacomposable/: base.py
tests/: __main__.py
