[metadata]
name = sfacomposable
version = 0.7.0
author = Chris Fuller
keywords = composition functional
description = Extensible Function Composition
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sfaleron/sfacomposable
project_urls =
    Bug Tracker = https://github.com/sfaleron/sfacomposable/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src
