[metadata]
name = sfacomposable
version = 0.8.0
author = Chris Fuller
license = Apache-2.0
keywords = composition functional
description = Extensible Function Composition
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sfaleron/sfacomposable
project_urls =
    Bug Tracker = https://github.com/sfaleron/sfacomposable/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.2

[options.packages.find]
where = src
